# transformer-int-intervals-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/integer_intervals/: alphabetic_ring_sample.json  interval_membership_sample.json  number_comparison_sample.json  range_containment_sample.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_residual_stream_probing_number_representation_hidden_states_20260320_021315.jsonl
papers/: README.md
papers/pages/: hanna2023_gpt2_greater_than_manifest.txt  hasani2026_counting_mechanisms_llms_manifest.txt  kadlcik2025_accurate_number_representations_manifest.txt  levy2024_number_representations_base10_manifest.txt  quirke2024_addition_subtraction_transformers_manifest.txt  stolfo2023_mechanistic_arithmetic_reasoning_manifest.txt  wallace2019_probing_numeracy_embeddings_manifest.txt  yuchi2026_llms_know_numbers_manifest.txt
results/: experiment_results.json
src/: data_generation.py  experiments.py  run_experiments.py  visualize.py
